#1290: Added CommandSecurityDefinitions to Entity Attribute Type UCs